ref - Cleaned unused strings
---

Type: ref
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/Metadata.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/Metadata.json
@@ -157,7 +157,7 @@
         "three": "tky",
         "name": "Turkish",
         "transliterable": false,
-        "country": "Turkey"
+        "country": "Türkiye"
     },
     {
         "three": "ukr",
