--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
@@ -31,7 +31,6 @@
     "找不到请求的屏幕保护程序{0}。",
     "{0}设置为默认屏幕保护程序。",
     "在数据库中找不到屏幕保护程序{0}。检查名称，然后重试。",
-    "打印文本时出现严重错误。",
     "由于以下原因，无法加载Mod：",
     "{0} v {1}开始",
     "没有命令{0}的定义。",
@@ -246,9 +245,7 @@
     "编写一个远程调试器端口。它必须是数字，并且不能已经使用。否则，远程调试器将无法打开端口。",
     "写下“ get”命令应重试失败下载的次数。它必须是数字。",
     "答案可能不是肯定的。",
-    "在任何模块上均未找到变量{0}。",
     "更改内核配置",
-    "切换语言时改变文化",
     "显示文字",
     "写下您想要显示的任何文本。越短越好。",
     "无法上传{0}",
@@ -297,7 +294,6 @@
     "您可以在https://home.openweathermap.org/api_keys获得自己的API密钥。",
     "温度的首选单位",
     "每次启动时，它将检查更新。",
-    "切换语言时，请更改月份名称，日历等。",
     "使硬件探测消息保持沉默。",
     "在显示登录屏幕之前显示每日消息。",
     "显示登录屏幕之前先清除屏幕。",
@@ -429,8 +425,6 @@
     "列出所有触发的事件",
     "当前目录",
     "设置 shell 的当前目录。写入任何现有目录的绝对路径。",
-    "换行列表输出",
-    "如果当前控制台几何体看起来太长，则包装列表输出。",
     "平！",
     "{0} 给你发了 ping。",
     "将主题保存到当前目录为...",
@@ -471,7 +465,6 @@
     "测试将资源中存在的字符串翻译成特定语言",
     "将字符串打印到控制台并解析找到的占位符",
     "测试正则表达式工具",
-    "启动所有模组",
     "测试 255 色的 VT 序列",
     "测试 VT 序列的真彩色",
     "发送通知以测试接收器",
@@ -666,9 +659,6 @@
     "列入黑名单的模组",
     "写下启动时不会运行的模组的文件名。完成后，写“q”。在路径旁边写一个减号以删除现有的 mod。",
     "Mod {0} 被列入黑名单。",
-    "重新加载所有模组",
-    "将模组添加到黑名单",
-    "从黑名单中删除一个模组",
     "在启动期间显示应用程序信息",
     "显示阶段完成时间",
     "启动时启动内核修改",
@@ -861,7 +851,6 @@
     "最少可以选择多少？",
     "最多可以选择多少个？",
     "如果指定，它将显示带有占位符支持的自定义启动横幅。您可以将 {0} 用于内核版本。",
-    "当前语言的哪个变体用于更改月份名称、日历等？",
     "激活真彩色支持。",
     "第 {0} 行中删除的单词。",
     "第 {0} 行中的字符串已替换。",
@@ -958,7 +947,6 @@
     "有关使用此软件的条款和条件的更多信息，请访问",
     "默认选择输出类型",
     "检查所有 KS 设置以查看变量是否正确写入",
-    "这些配置条目具有无效的变量或枚举，需要修复：",
     "未找到文件 {0}",
     "使用提供的值创建一个变量数组",
     "检查所有本地化文本行号以查看它们是否都相等",
@@ -1031,8 +1019,6 @@
     "JSON shell 的默认 JSON 格式",
     "选择要保存的 JSON shell 的默认 JSON 格式（美化或缩小）。",
     "成功下载更新！",
-    "自动下载更新",
-    "如果有任何更新，内核将自动下载它。",
     "烟花爆炸半径",
     "点燃时烟花的爆炸半径是多少块（最多 10 个）？",
     "此命令具有以下开关，可更改其工作方式：",
@@ -1225,7 +1211,6 @@
     "欢迎来到硝化内核！感谢您尝试一下！",
     "要开始，请按 ENTER 键。",
     "选择你的语言。默认情况下，内核使用英语，但您可以在此处选择任何其他语言。",
-    "根据您系统上的语言设置，适当的语言是",
     "创建您的第一个用户",
     "我们将帮助您创建自己的用户名。选择您想要的任何名称。这可以是您的昵称或简称，只要您的用户名不包含空格和特殊字符并且该用户名尚不存在。已注册以下用户名：",
     "输入用户名",
@@ -1235,7 +1220,6 @@
     "Nitrocid KS 目前会自行更新以获得最新版本，其中包括一般改进和错误修复。新的主要版本通常包括重大更改和新的令人兴奋的功能。",
     "您希望 Nitrocid KS 自动检查更新吗？",
     "除了自动检查更新外，Nitrocid KS 还可以自动下载更新文件。",
-    "您希望 Nitrocid KS 自动下载更新吗？",
     "您始终可以使用“update”命令检查内核更新。",
     "开始吧！",
     "恭喜！您现在拥有一个用户帐户，{0}！",
@@ -1272,8 +1256,6 @@
     "无参数帮助说明",
     "您的控制台必须支持真彩色才能使用此主题。",
     "退出预览",
-    "完毕",
-    "开关类型",
     "主题“{0}”庆祝一项活动，但您要么太早，要么太晚，无法参加。每年，此主题的访问时间为 {1}/{2} 至 {3}/{4}。",
     "主题 {0} 需要真彩色支持，但您的控制台不支持。",
     "文本不能为空。",
@@ -1337,14 +1319,12 @@
     "不是有效的配置类。",
     "配置文件无效。",
     "尝试读取配置时出错：{0}。",
-    "内核配置将无法正常工作。无效的键是",
     "验证失败！",
     "读取失败！",
     "正在尝试修复配置...",
     "未指定类型时无法检查配置变量。",
     "未指定条目时无法检查配置变量。",
     "尝试注册没有内容的自定义设置。",
-    "尝试注册包含无效内容的自定义设置。无效的键是",
     "尝试取消注册没有名称的自定义设置。",
     "自定义设置未注册。",
     "尝试查询空的自定义设置。",
@@ -1352,7 +1332,6 @@
     "找不到与指定变量匹配的设置键。",
     "设置条目 JSON 值为空。",
     "尝试注册没有内容的基本设置。",
-    "尝试注册包含无效内容的基本设置。无效的键是",
     "尝试取消注册没有名称的基本设置。",
     "断言失败。",
     "未找到事件 {0}。",
@@ -1523,9 +1502,6 @@
     "无法初始化内核插件",
     "未能完成插件。以下插件未能最终确定：",
     "无法停止插件。以下插件无法停止：",
-    "无法获取函数列表",
-    "无法获取属性列表",
-    "无法获取字段列表",
     "无法使用不存在的插件执行自定义函数",
     "在插件“{1}”中找不到函数“{0}”。",
     "在插件“{1}”中找不到属性“{0}”。",
@@ -1602,17 +1578,14 @@
     "硬件检测",
     "可选组件",
     "用户初始化",
-    "内核修改",
     "系统完整性验证",
     "阶段",
     "在维护模式下运行。跳过阶段...",
     "当同一线程已在运行时，无法重新生成内核线程。",
     "子线程启动操作不能为空。",
     "内核线程 {0} 失败。",
-    "您已使用包管理器安装了 Nitrocid KS。请使用它来升级您的内核。",
     "没有信息。",
     "无法打开文件或文件夹",
-    "按任意键关闭该窗口。",
     "换行样式：",
     "二进制文件：",
     "MIME 元数据：",
@@ -1687,7 +1660,6 @@
     "失败",
     "进度处理程序不能为空。",
     "加工...",
-    "该方法类型未在基本 Nitrocid 类型列表中定义。",
     "这个方法是不存在的。",
     "该方法是静态的。使用非对象重载。",
     "这个方法不是静态的。使用对象重载。",
@@ -1705,8 +1677,6 @@
     "我们已达到 {0}%！",
     "加载中...",
     "无法使用不存在的 mod 执行自定义函数",
-    "无法使用不存在的 mod 执行自定义属性",
-    "无法使用不存在的 mod 执行自定义字段",
     "依赖性未得到满足。下面列出了失败的依赖项：",
     "尝试在手册中查询不存在的 mod {0}。",
     "尝试为不存在的 mod {1} 初始化手册 {0}。",
@@ -1818,26 +1788,10 @@
     "网络系统测试",
     "UESH shell 测试",
     "用户测试",
-    "统计数据",
     "关闭",
-    "显示当前测试统计数据",
     "退出测试模式并关闭内核",
     "选择要运行的测试部分",
-    "测试全部",
-    "测试所有外墙",
-    "返回到部分选择",
-    "选择要运行的测试外观",
-    "该测试包含可选参数。输入要添加到测试参数的参数值。",
-    "参数个数",
-    "是的！",
     "不",
-    "重试",
-    "测试是否按预期运行？",
-    "测试失败了。预期值为 {0}，但实际值为 {1}。",
-    "测试意外失败。",
-    "成功的测试：",
-    "失败的测试：",
-    "要运行的测试：",
     "堆栈帧数不应超过当前帧数或不应为负数。",
     "硝基杀虫剂KS",
     "内核线程管理程序检测到 {0} 个尚未启动的关键线程。",
@@ -1929,7 +1883,6 @@
     "更改首选用户语言",
     "您必须先启用调试模式，然后才能使用调试 shell。",
     "获取当前回溯",
-    "使用会话号轻松获取调试日志信息",
     "从内核异常类型获取消息。对于调试很有用",
     "获取字段值",
     "获取属性值",
@@ -1961,7 +1914,6 @@
     "检查文件或文件夹锁定",
     "等待文件或文件夹解锁",
     "更改语言",
-    "使用系统语言设置来尝试推断语言",
     "更改用户语言而不是系统语言",
     "一行选择样式",
     "两行选择样式",
@@ -2124,12 +2076,8 @@
     "将字符串打印到调试器",
     "将字符串打印到调试器并格式化",
     "将带有格式的字符串打印到控制台",
-    "将 Figlet 字符串打印到控制台",
-    "将带有格式的 Figlet 字符串打印到控制台",
     "将字符串打印到控制台并突出显示",
     "将分隔符打印到控制台",
-    "用颜色打印分隔符到控制台",
-    "将带有格式和颜色的分隔符打印到控制台",
     "使用格式将分隔符打印到控制台",
     "将字符串打印到控制台，并在字符串中换行",
     "将包含空字符的字符串打印到控制台",
@@ -2193,8 +2141,6 @@
     "团体",
     "首选用户语言设置为 {0}。您可能想再次登录。",
     "管理员外壳",
-    "会话号无效",
-    "没有该会话号",
     "没有这样的异常类型",
     "异常类型名称",
     "信息",
@@ -2317,8 +2263,6 @@
     "可用的",
     "选择一个主题",
     "您想设置这个主题吗？",
-    "是的，设置一下！",
-    "不，不要设置它。",
     "要访问 Nitrocid 一般用途的用户手册，请访问以下链接：",
     "要访问开发人员手册以了解内核修改和屏幕保护程序的更新方法，请访问以下链接：",
     "您已经在运行高浓度硝化剂会话了！",
@@ -2348,7 +2292,6 @@
     "纪念内核发布 5 周年",
     "在归档 shell 中打开归档文件",
     "从歌词文件中获取所有歌词行",
-    "打开交互式音乐播放器",
     "播放歌词文件",
     "播放声音",
     "添加闹钟，在您的茶或咖啡准备好时提醒您。",
@@ -2469,8 +2412,6 @@
     "什么也提取不出来。",
     "存档不可写，因为类型是",
     "确保指定 LRC 文件的路径。",
-    "音乐文件“{0}”不存在。",
-    "BassBoom CLI 插件中出现致命错误。",
     "无法播放声音，因为找不到该文件。",
     "成功打开音乐文件。",
     "无法打开音乐文件。",
@@ -2483,63 +2424,8 @@
     "期间",
     "按“q”停止播放。",
     "无法播放声音。",
-    "尝试处理均衡器操作时，Basolia 出现错误。",
-    "尝试处理均衡器操作时，Basolia 输出出现错误。",
-    "尝试处理均衡器操作时出现未知错误。",
-    "改变",
-    "选择频段",
-    "由 BassBoom 提供支持",
-    "输入音乐文件的路径",
-    "文件“{0}”不存在。",
-    "输入音乐库目录的路径",
-    "未找到音乐库目录。",
-    "正在加载 BassBoom 以打开 {0}...",
     "正在播放",
-    "尝试打开歌词文件",
-    "无法打开歌词文件",
-    "按此格式写入目标位置",
-    "可用的击键",
-    "播放/暂停",
-    "停止",
-    "音量控制",
-    "寻求控制",
-    "寻求持续时间控制",
-    "歌曲信息",
-    "添加音乐文件",
-    "上一首歌曲",
-    "下一首歌",
-    "删除当前歌曲",
-    "删除所有歌曲",
-    "未知",
     "标题",
-    "专辑",
-    "评论",
-    "歌词",
-    "线",
-    "没有歌词",
-    "图层信息",
-    "层",
-    "速度",
-    "模式",
-    "模式扩展",
-    "框架尺寸",
-    "强调",
-    "比特率",
-    "ABR 率",
-    "可变比特率",
-    "文本和附加内容",
-    "无法打开音乐文件“{0}”，因为找不到该文件。",
-    "歌名",
-    "歌曲艺术家",
-    "歌曲类型",
-    "寻找",
-    "体积",
-    "尝试处理音乐文件时 Basolia 出现错误。",
-    "尝试处理音乐文件时，Basolia 输出出现错误。",
-    "尝试处理音乐文件时出现未知错误。",
-    "播放失败",
-    "帮助",
-    "按“A”将一首歌曲插入播放列表，或按“S”插入整个音乐库。",
     "美式咖啡",
     "红茶",
     "绿茶",
@@ -2718,7 +2604,6 @@
     "您尚未输入要转换的数字。",
     "输入的号码无效。",
     "无法换算单位。",
-    "庆祝自 0.0.1 以来的第 6,000 次提交！",
     "待续...",
     "结束",
     "新年快乐！",
@@ -2923,12 +2808,6 @@
     "语言",
     "指定内核语言。",
     "文化",
-    "启用色盲",
-    "如果您是色盲或想要模拟色盲，则可以启用它。",
-    "色盲类型",
-    "色盲的类型，无论是 protan、deuter 还是 tritan。",
-    "色盲严重程度",
-    "色盲有多严重？",
     "关机或重新启动时发出蜂鸣声",
     "关闭内核时启用蜂鸣声。",
     "延迟关闭或重新启动",
@@ -2941,18 +2820,12 @@
     "如果设置为 true，则每次您在开发版本中启动内核时，内核将不会向您显示开发通知。",
     "允许加载不受信任的模组",
     "如果设置为 true，则内核在加载没有签名公钥的 mod 时不会出错。",
-    "启用调试配额",
-    "如果启用此选项，则调试编写器会在超出配额时轮换调试日志文件。",
-    "调试配额行数",
-    "在达到配额限制之前要打印多少行到调试缓冲区？请注意，它并不代表调试日志文件中有多少行。",
     "使用系统时区",
     "如果启用此选项，内核将使用计算机设置中的时区。否则，使用可配置的内核范围时区。",
     "内核范围内的时区",
     "要使用的内核范围时区",
     "显示许可证信息框",
     "每次登录后是否显示模式许可证信息框三秒。建议继续使用。",
-    "调试日志的旧日志记录样式",
-    "是否启用调试日志的旧日志记录样式或启用分组调试日志。",
     "此部分允许您选择要更改的颜色类型。",
     "颜色设置",
     "使用强调色",
@@ -3040,8 +2913,6 @@
     "在命令执行时设置控制台标题",
     "设置命令执行时的控制台标题。",
     "显示壳数",
-    "本节列出了 shell 预设设置。",
-    "外壳预设设置",
     "提示预设",
     "文本编辑提示预设",
     "十六进制编辑提示预设",
@@ -3104,7 +2975,6 @@
     "在更新 CPU 使用率并将其打印到调试器之前需要等待多少毫秒？",
     "蛇游戏。",
     "向您展示精彩的名言。",
-    "此部分允许您配置游戏的工作方式。",
     "选择您喜欢的难度，其中 0 是简单，1 是中等，2 是困难，3 是非常困难，4 是自定义。",
     "在 ShipDuet 中使用 PowerLine 渲染太空飞船",
     "是使用PowerLine渲染飞船还是使用标准大于字符。如果您想将 PowerLine 与 ShipDuet 一起使用，则需要安装支持 PowerLine 的适当字体。",
@@ -3133,7 +3003,6 @@
     "本部分允许您配置 SFTP shell 的工作方式。",
     "本部分允许您配置 SQL shell 的工作方式。",
     "SQL Shell 提示预设",
-    "本部分允许您配置计时器的工作方式。",
     "此部分允许您配置提示的工作方式。",
     "显示内核提示",
     "如果启用，shell 会在每次登录时显示提示。",
@@ -3281,7 +3150,6 @@
     "自动更新检查",
     "是的，我愿意！",
     "不，谢谢。",
-    "自动更新下载",
     "在安全模式下不允许启动或停止模块。",
     "出现未知的内核错误，可能是由于未指定内核异常类型或出现问题。",
     "内核网络报告了主机名组件的错误。",
@@ -3416,7 +3284,6 @@
     "使用常用词汇表。",
     "使用完整的单词表。",
     "乒乓球比赛！",
-    "打开电台播放器",
     "读取蜂鸣合成器文件",
     "将源颜色模型以数字形式转换为目标颜色模型。",
     "将源颜色模型转换为 KS 格式的目标颜色模型。",
@@ -3445,72 +3312,6 @@
     "在交互式 TUI 中创建新主题",
     "您可以使用内核模块制作可启动程序吗？",
     "站类型",
-    "设备",
-    "司机",
-    "未播放时无法查询当前设备。",
-    "设备和驱动程序",
-    "可用设备和驱动程序",
-    "BassBoom 规格",
-    "解码器",
-    "系统规格",
-    "巴索利亚版",
-    "MPG123 版本",
-    "OUT123 版本",
-    "支持的解码器",
-    "所有解码器",
-    "系统",
-    "系统架构",
-    "流程架构",
-    "系统描述",
-    ".NET 描述",
-    "设置重复检查点",
-    "寻求重复检查点",
-    "打开均衡器",
-    "设备和驱动程序信息",
-    "设置设备和驱动程序",
-    "重置设备和驱动程序",
-    "系统信息",
-    "电台信息",
-    "电台扩展信息",
-    "添加广播电台",
-    "以前的广播电台",
-    "下一个广播电台",
-    "删除当前广播电台",
-    "删除所有广播电台",
-    "选择一个驱动程序。按 ESC 退出。",
-    "选择设备。当前驱动程序为 {0}。按 ESC 退出。",
-    "未播放。音乐播放器处于空闲状态。",
-    "低音",
-    "中上层",
-    "高音",
-    "未知波段类型",
-    "均衡器频段",
-    "选择歌词以寻找",
-    "本土州",
-    "精准渲染",
-    "缓冲区填充",
-    "解码延迟",
-    "编码延迟",
-    "编码填充",
-    "科学怪人流",
-    "新鲜解码器",
-    "按“A”将广播电台插入播放列表。",
-    "输入电台的路径。电台的 URL 必须提供 MPEG 电台。尚不支持 AAC 电台。",
-    "车站信息",
-    "电台网址",
-    "电台名称",
-    "电台当前歌曲",
-    "主页",
-    "流路径",
-    "听众：{0}，高峰期为{1}",
-    "比特率",
-    "媒体类型",
-    "电台服务器信息",
-    "流信息",
-    "电台使用 HTTPS",
-    "电台服务器类型",
-    "电台流：{0}，其中 {1} 个处于活动状态",
-    "电台听众：{0}，高峰期为{1}",
     "蜂鸣合成文件不存在。",
     "章节名称",
     "合成表示无效。",
@@ -3653,7 +3454,6 @@
     "未指定扩展的处理程序。",
     "无法获取默认处理程序",
     "加载默认处理程序失败。",
-    "尝试访问无效路径。进行此检查是为了防止未更新到 2021 年 4 月补丁或更高版本的旧版 Windows 10 系统访问已知会导致 NTFS 文件系统损坏或蓝屏死机 (BSOD) 问题的这些路径。这意味着调用者正在尝试导致拒绝服务 (DoS) 并且应该进行修复，或者用户输入是恶意的。",
     "选择",
     "复制",
     "移动",
@@ -3692,11 +3492,6 @@
     "无法从以下位置获取远程调试设备",
     "无法打开英语本地化资源",
     "无法打开本地化资源",
-    "无法获取 figlet 字体",
-    "将 figlet 字符串打印到控制台（居中）",
-    "将 figlet 字符串以格式化（居中）打印到控制台",
-    "将 figlet 字符串打印到控制台（居中、位置）",
-    "将 figlet 字符串以格式化（居中、位置）打印到控制台",
     "无法获取入口点。",
     "测试信息框中的按钮（标题）",
     "测试信息框中的彩色输入框（带标题）",
@@ -3714,7 +3509,6 @@
     "处理文本时发生正则表达式错误。请检查正则表达式语法并重试。如果发生超时，请确保不要进行过多的递归（不要太贪心）。",
     "主页工具在尝试处理您的请求时遇到错误。请确保您已正确输入所有必要的数据。",
     "不幸的是，最后一次失败是未知的，所以我们不知道到底出了什么问题。但是，如果你查阅过内核调试日志，可能会有所帮助。",
-    "无法获取插件元数据",
     "无法获取字段信息",
     "无法获取日记帐分录",
     "（使用箭头键突出显示您的选择，然后按 ENTER。）",
@@ -3818,7 +3612,6 @@
     "返回搜索",
     "原始信息",
     "从 MeCard 导入",
-    "暂无房产信息",
     "手动添加",
     "无法获取日期部分数组",
     "无法获取白天部分",
@@ -3830,18 +3623,8 @@
     "生成名称标签（目前不支持变音符号）",
     "转变...",
     "单位换算器",
-    "音乐播放器",
-    "广播播放器",
     "互联网广播 (FM) 信息",
     "无法获取网络电台信息。",
-    "设备（缓存",
-    "驱动程序（缓存",
-    "（空闲时）将音乐目录添加到播放列表",
-    "（游戏时）选择性寻找",
-    "（播放时）返回上一首歌词",
-    "（播放时）跳至下一首歌词",
-    "（播放时）跳至当前歌词",
-    "（播放时）搜索哪首歌词",
     "改变...",
     "节省...",
     "加载...",
@@ -3932,7 +3715,6 @@
     "用这个主题重现怀旧之情！",
     "你的航站楼由木板组成",
     "灵感源自中国不同水果的图案",
-    "附加功能 - CRC32C (Castagnoli)",
-    "开发版本已禁用检查更新。"
+    "附加功能 - CRC32C (Castagnoli)"
   ]
 }
