--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
@@ -31,7 +31,6 @@
     "未找到請求的屏幕保護程序 {0}。",
     "{0} 設置為默認屏幕保護程序。",
     "在數據庫中找不到屏幕保護程序 {0}。檢查名稱並重試。",
-    "打印文本時出現嚴重錯誤。",
     "由於以下原因，無法加載 Mod：",
     "{0} v{1} 已開始",
     "命令 {0} 沒有定義。",
@@ -246,9 +245,7 @@
     "編寫遠程調試器端口。它必須是數字，並且不得已被使用。否則，遠程調試器將無法打開該端口。",
     "寫下“get”命令應該重試失敗下載的次數。它必須是數字。",
     "答案可能不會是否定的。",
-    "在任何模塊上都找不到變量 {0}。",
     "更改內核配置",
-    "切換語言時改變文化",
     "顯示的文字",
     "寫下您想要顯示的任何文本。越短越好。",
     "未能上傳 {0}",
@@ -297,7 +294,6 @@
     "您可以在 https://home.openweathermap.org/api_keys 獲取自己的 API 密鑰。",
     "首選溫度單位",
     "每次啟動時，它都會檢查更新。",
-    "切換語言時，更改月份名稱、日曆等。",
     "保持硬件探測消息靜默。",
     "在顯示登錄屏幕之前顯示當天的消息。",
     "在顯示登錄屏幕之前清除屏幕。",
@@ -429,8 +425,6 @@
     "列出所有觸發的事件",
     "當前目錄",
     "設置 shell 的當前目錄。寫入任何現有目錄的絕對路徑。",
-    "換行列表輸出",
-    "如果對於當前控制台幾何圖形看起來太長，則包裝列表輸出。",
     "平！",
     "{0} 給你發了 ping。",
     "將主題保存到當前目錄為...",
@@ -471,7 +465,6 @@
     "測試將資源中存在的字符串翻譯成特定語言",
     "將字符串打印到控制台並解析找到的佔位符",
     "測試正則表達式工具",
-    "啟動所有模組",
     "測試 255 色的 VT 序列",
     "測試 VT 序列的真彩色",
     "發送通知以測試接收器",
@@ -666,9 +659,6 @@
     "列入黑名單的模組",
     "寫下啟動時不會運行的模組的文件名。完成後，寫“q”。在路徑旁邊寫一個減號以刪除現有的 mod。",
     "Mod {0} 被列入黑名單。",
-    "重新加載所有模組",
-    "將模組添加到黑名單",
-    "從黑名單中刪除一個模組",
     "在啟動期間顯示應用程序信息",
     "顯示階段完成時間",
     "啟動時啟動內核修改",
@@ -861,7 +851,6 @@
     "最少可以選擇多少？",
     "最多可以選擇多少個？",
     "如果指定，它將顯示帶有佔位符支持的自定義啟動橫幅。您可以將 {0} 用於內核版本。",
-    "當前語言的哪個變體用於更改月份名稱、日曆等？",
     "激活真彩色支持。",
     "第 {0} 行中刪除的單詞。",
     "第 {0} 行中的字符串已替換。",
@@ -958,7 +947,6 @@
     "有關使用此軟件的條款和條件的更多信息，請訪問",
     "默認選擇輸出類型",
     "檢查所有 KS 設置以查看變量是否正確寫入",
-    "這些配置條目具有無效的變量或枚舉，需要修復：",
     "未找到文件 {0}",
     "使用提供的值創建一個變量數組",
     "檢查所有本地化文本行號以查看它們是否都相等",
@@ -1031,8 +1019,6 @@
     "JSON shell 的默認 JSON 格式",
     "選擇要保存的 JSON shell 的默認 JSON 格式（美化或縮小）。",
     "成功下載更新！",
-    "自動下載更新",
-    "如果有任何更新，內核將自動下載它。",
     "煙花爆炸半徑",
     "點燃時煙花的爆炸半徑是多少塊（最多 10 個）？",
     "此命令具有以下開關，可更改其工作方式：",
@@ -1225,7 +1211,6 @@
     "歡迎來到硝化內核！感謝您嘗試！",
     "若要開始，請按 ENTER 鍵。",
     "選擇你的語言。預設情況下，核心使用英語，但您可以在此處選擇任何其他語言。",
-    "根據您系統上的語言設置，適當的語言是",
     "創建您的第一個用戶",
     "我們將幫助您創建自己的用戶名。選擇您想要的任何名稱。這可以是您的暱稱或簡稱，只要您的使用者名稱不包含空格和特殊字元且該使用者名稱尚不存在。已註冊以下使用者名稱：",
     "輸入使用者名稱",
@@ -1235,7 +1220,6 @@
     "Nitrocid KS 目前會自行更新以獲得最新版本，其中包括一般改進和錯誤修復。新的主要版本通常包括重大更改和新的令人興奮的功能。",
     "您希望 Nitrocid KS 自動檢查更新嗎？",
     "除了自動檢查更新外，Nitrocid KS 還可以自動下載更新檔案。",
-    "您希望 Nitrocid KS 自動下載更新嗎？",
     "您始終可以使用“update”命令檢查內核更新。",
     "開始吧！",
     "恭喜！您現在擁有一個使用者帳戶，{0}！",
@@ -1272,8 +1256,6 @@
     "無參數幫助說明",
     "您的控制台必須支援真彩色才能使用此主題。",
     "退出預覽",
-    "完畢",
-    "開關類型",
     "主題「{0}」慶祝一項活動，但您要么太早，要么太晚，無法參加。每年，此主題的造訪時間為 {1}/{2} 至 {3}/{4}。",
     "主題 {0} 需要真彩色支持，但您的控制台不支援。",
     "文字不能為空。",
@@ -1337,14 +1319,12 @@
     "不是有效的配置類別。",
     "設定檔無效。",
     "嘗試讀取配置時發生錯誤：{0}。",
-    "內核配置將無法正常運作。無效的鍵是",
     "驗證失敗！",
     "讀取失敗！",
     "正在嘗試修復配置...",
     "未指定類型時無法檢查配置變數。",
     "未指定條目時無法檢查配置變數。",
     "嘗試註冊沒有內容的自訂設定。",
-    "嘗試註冊包含無效內容的自訂設定。無效的鍵是",
     "嘗試取消註冊沒有名稱的自訂設定。",
     "自訂設定未註冊。",
     "嘗試查詢空的自訂設定。",
@@ -1352,7 +1332,6 @@
     "找不到與指定變數相符的設定鍵。",
     "設定條目 JSON 值為空。",
     "嘗試註冊沒有內容的基本設定。",
-    "嘗試註冊包含無效內容的基本設定。無效的鍵是",
     "嘗試取消註冊沒有名稱的基本設定。",
     "斷言失敗。",
     "未找到事件 {0}。",
@@ -1523,9 +1502,6 @@
     "無法初始化內核插件",
     "未能完成插件。以下插件未能最終確定：",
     "無法停止插件。以下插件無法停止：",
-    "無法取得函數列表",
-    "無法取得屬性列表",
-    "無法取得欄位列表",
     "無法使用不存在的插件執行自訂函數",
     "在外掛程式“{1}”中找不到函數“{0}”。",
     "在外掛程式「{1}」中找不到屬性「{0}」。",
@@ -1602,17 +1578,14 @@
     "硬體偵測",
     "可選組件",
     "使用者初始化",
-    "內核修改",
     "系統完整性驗證",
     "階段",
     "在維護模式下運作。跳過階段...",
     "當同一執行緒已在運行時，無法重新產生內核執行緒。",
     "子執行緒啟動操作不能為空。",
     "內核線程 {0} 失敗。",
-    "您已使用套件管理器安裝了 Nitrocid KS。請使用它來升級您的核心。",
     "沒有資訊。",
     "無法開啟檔案或資料夾",
-    "按任意鍵關閉該視窗。",
     "換行樣式：",
     "二進位檔案：",
     "MIME 元資料：",
@@ -1687,7 +1660,6 @@
     "失敗",
     "進度處理程序不能為空。",
     "加工...",
-    "此方法類型未在基本 Nitrocid 類型清單中定義。",
     "這個方法是不存在的。",
     "該方法是靜態的。使用非物件重載。",
     "這個方法不是靜態的。使用物件重載。",
@@ -1705,8 +1677,6 @@
     "我們已達到 {0}%！",
     "載入中...",
     "無法使用不存在的 mod 執行自訂函數",
-    "無法使用不存在的 mod 執行自訂屬性",
-    "無法使用不存在的 mod 執行自訂字段",
     "依賴性未得到滿足。下面列出了失敗的依賴項：",
     "嘗試在手冊中查詢不存在的 mod {0}。",
     "嘗試為不存在的 mod {1} 初始化手冊 {0}。",
@@ -1818,26 +1788,10 @@
     "網路系統測試",
     "UESH shell 測試",
     "用戶測試",
-    "統計數據",
     "關閉",
-    "顯示目前測試統計數據",
     "退出測試模式並關閉內核",
     "選擇要運行的測試部分",
-    "測試全部",
-    "測試所有外牆",
-    "回到部分選擇",
-    "選擇要運行的測試外觀",
-    "此測試包含可選參數。輸入要新增到測試參數的參數值。",
-    "參數個數",
-    "是的！",
     "不",
-    "重試",
-    "測試是否如預期運作？",
-    "測試失敗了。預期值為 {0}，但實際值為 {1}。",
-    "測試意外失敗。",
-    "成功的測試：",
-    "失敗的測試：",
-    "要運行的測試：",
     "堆疊幀數不應超過目前幀數或不應為負數。",
     "硝基殺蟲劑KS",
     "核心執行緒管理程式偵測到 {0} 個尚未啟動的關鍵執行緒。",
@@ -1929,7 +1883,6 @@
     "更改首選使用者語言",
     "您必須先啟用偵錯模式，然後才能使用偵錯 shell。",
     "獲取當前回溯",
-    "使用會話號碼輕鬆獲取調試日誌信息",
     "從內核異常類型獲取訊息。對於調試很有用",
     "取得欄位值",
     "取得屬性值",
@@ -1961,7 +1914,6 @@
     "檢查檔案或資料夾鎖定",
     "等待文件或資料夾解鎖",
     "更改語言",
-    "使用系統語言設定來嘗試推斷語言",
     "更改使用者語言而不是系統語言",
     "一行選擇樣式",
     "兩行選擇樣式",
@@ -2124,12 +2076,8 @@
     "將字串列印到調試器",
     "將字串列印到調試器並格式化",
     "將帶有格式的字串列印到控制台",
-    "將 Figlet 字串列印到控制台",
-    "將帶有格式的 Figlet 字串列印到控制台",
     "將字串列印到控制台並突出顯示",
     "將分隔符號列印到控制台",
-    "用顏色列印分隔符號到控制台",
-    "將帶有格式和顏色的分隔符號列印到控制台",
     "使用格式將分隔符號列印到控制台",
     "將字串列印到控制台，並在字串中換行",
     "將包含空字元的字串列印到控制台",
@@ -2193,8 +2141,6 @@
     "團體",
     "首選使用者語言設定為 {0}。您可能想再次登入。",
     "管理員外殼",
-    "會話號碼無效",
-    "沒有該會話號",
     "沒有這樣的異常類型",
     "異常類型名稱",
     "訊息",
@@ -2317,8 +2263,6 @@
     "可用的",
     "選擇一個主題",
     "您想設定這個主題嗎？",
-    "是的，設定一下！",
-    "不，不要設定它。",
     "若要存取 Nitrocid 一般用途的使用手冊，請造訪以下連結：",
     "若要存取開發人員手冊以了解核心修改和螢幕保護程式的更新方法，請造訪以下連結：",
     "您已經在運行高濃度硝化劑會話了！",
@@ -2348,7 +2292,6 @@
     "紀念內核發布 5 週年",
     "在歸檔 shell 中開啟歸檔文件",
     "從歌詞檔案中獲取所有歌詞行",
-    "開啟互動式音樂播放器",
     "播放歌詞文件",
     "播放聲音",
     "添加鬧鐘，在您的茶或咖啡準備好時提醒您。",
@@ -2469,8 +2412,6 @@
     "什麼也提取不出來。",
     "存檔不可寫，因為類型是",
     "確保指定 LRC 檔案的路徑。",
-    "音樂檔案「{0}」不存在。",
-    "BassBoom CLI 插件中出現致命錯誤。",
     "無法播放聲音，因為找不到該檔案。",
     "成功開啟音樂檔案。",
     "無法開啟音樂檔案。",
@@ -2483,63 +2424,8 @@
     "期間",
     "按“q”停止播放。",
     "無法播放聲音。",
-    "嘗試處理均衡器操作時，Basolia 出現錯誤。",
-    "嘗試處理均衡器操作時，Basolia 輸出出現錯誤。",
-    "嘗試處理均衡器操作時出現未知錯誤。",
-    "改變",
-    "選擇頻段",
-    "由 BassBoom 提供支持",
-    "輸入音樂檔案的路徑",
-    "文件“{0}”不存在。",
-    "輸入音樂庫目錄的路徑",
-    "未找到音樂庫目錄。",
-    "正在載入 BassBoom 以開啟 {0}...",
     "正在播放",
-    "嘗試開啟歌詞文件",
-    "無法開啟歌詞文件",
-    "按此格式寫入目標位置",
-    "可用的擊鍵",
-    "播放/暫停",
-    "停止",
-    "音量控制",
-    "尋求控制",
-    "尋求持續時間控制",
-    "歌曲訊息",
-    "新增音樂文件",
-    "上一首歌曲",
-    "下一首歌",
-    "刪除目前歌曲",
-    "刪除所有歌曲",
-    "未知",
     "標題",
-    "專輯",
-    "評論",
-    "歌詞",
-    "線",
-    "沒有歌詞",
-    "圖層資訊",
-    "層",
-    "速度",
-    "模式",
-    "模式擴充",
-    "框架尺寸",
-    "強調",
-    "位元率",
-    "ABR 率",
-    "可變位元速率",
-    "文字和附加內容",
-    "無法開啟音樂檔案“{0}”，因為找不到該檔案。",
-    "歌名",
-    "歌曲藝術家",
-    "歌曲類型",
-    "尋找",
-    "體積",
-    "嘗試處理音樂檔案時 Basolia 出現錯誤。",
-    "嘗試處理音樂檔案時，Basolia 輸出出現錯誤。",
-    "嘗試處理音樂檔案時出現未知錯誤。",
-    "播放失敗",
-    "幫助",
-    "按“A”將一首歌曲插入播放列表，或按“S”插入整個音樂庫。",
     "美式咖啡",
     "紅茶",
     "綠茶",
@@ -2718,7 +2604,6 @@
     "您尚未輸入要轉換的數字。",
     "輸入的號碼無效。",
     "無法換算單位。",
-    "慶祝自 0.0.1 以來的第 6,000 次提交！",
     "待續...",
     "結束",
     "新年快樂！",
@@ -2923,12 +2808,6 @@
     "語言",
     "指定內核語言。",
     "文化",
-    "啟用色盲",
-    "如果您是色盲或想要模擬色盲，則可以啟用它。",
-    "色盲類型",
-    "色盲的類型，無論是 protan、deuter 或 tritan。",
-    "色盲嚴重程度",
-    "色盲有多嚴重？",
     "關機或重新啟動時發出蜂鳴聲",
     "關閉核心時啟用蜂鳴聲。",
     "延遲關閉或重新啟動",
@@ -2941,18 +2820,12 @@
     "如果設定為 true，則每次您在開發版本中啟動核心時，核心將不會向您顯示開發通知。",
     "允許載入不受信任的模組",
     "如果設定為 true，則核心在載入沒有簽名公鑰的 mod 時不會出錯。",
-    "啟用調試配額",
-    "如果啟用此選項，則偵錯編寫器會在超出配額時輪換偵錯日誌檔案。",
-    "調試配額行數",
-    "在達到配額限制之前要列印多少行到調試緩衝區？請注意，它並不代表調試日誌檔案中有多少行。",
     "使用系統時區",
     "如果啟用此選項，核心將使用電腦設定中的時區。否則，使用可設定的核心範圍時區。",
     "內核範圍內的時區",
     "要使用的核心範圍時區",
     "顯示許可證資訊框",
     "每次登入後是否顯示模式許可證資訊框三秒。建議繼續使用。",
-    "調試日誌的舊日誌記錄樣式",
-    "是否啟用偵錯日誌的舊日誌記錄樣式或啟用分組偵錯日誌。",
     "此部分可讓您選擇要變更的顏色類型。",
     "顏色設定",
     "使用強調色",
@@ -3040,8 +2913,6 @@
     "在命令執行時設定控制台標題",
     "設定指令執行時的控制台標題。",
     "顯示殼數",
-    "本節列出了 shell 預設設定。",
-    "外殼預設設置",
     "提示預設",
     "文字編輯提示預設",
     "十六進位編輯提示預設",
@@ -3104,7 +2975,6 @@
     "在更新 CPU 使用率並將其列印到偵錯器之前需要等待多少毫秒？",
     "蛇遊戲。",
     "向您展示精彩的名言。",
-    "此部分可讓您配置遊戲的工作方式。",
     "選擇您喜歡的難度，其中 0 是簡單，1 是中等，2 是困難，3 是非常困難，4 是自訂。",
     "在 ShipDuet 中使用 PowerLine 渲染太空船",
     "是使用PowerLine渲染飛船還是使用標準大於字元。如果您想要將 PowerLine 與 ShipDuet 一起使用，則需要安裝支援 PowerLine 的適當字型。",
@@ -3133,7 +3003,6 @@
     "本部分可讓您配置 SFTP shell 的工作方式。",
     "本部分可讓您配置 SQL shell 的工作方式。",
     "SQL Shell 提示預設",
-    "本部分可讓您配置計時器的工作方式。",
     "此部分可讓您配置提示的工作方式。",
     "顯示內核提示",
     "如果啟用，shell 會在每次登入時顯示提示。",
@@ -3281,7 +3150,6 @@
     "自動更新檢查",
     "是的，我願意！",
     "不，謝謝。",
-    "自動更新下載",
     "安全模式下不允許啟動或停止 mod。",
     "存在未知的內核錯誤，可能是由於未指定內核異常類型或出現問題。",
     "核心網路已報告主機名稱組件錯誤。",
@@ -3416,7 +3284,6 @@
     "使用常用單字列表。",
     "使用完整的單字列表。",
     "乒乓球比賽！",
-    "開啟廣播電台播放器",
     "讀取蜂鳴聲合成文件",
     "將來源色彩模型以數字形式轉換為目標色彩模型。",
     "將來源色彩模型轉換為 KS 格式的目標色彩模型。",
@@ -3445,72 +3312,6 @@
     "在互動式 TUI 中建立新主題",
     "您可以使用核心模組製作可啟動程式嗎？",
     "車站類型",
-    "裝置",
-    "司機",
-    "不玩時無法查詢目前設備。",
-    "設備和驅動程式",
-    "可用的設備和驅動程式",
-    "BassBoom 規格",
-    "解碼器",
-    "系統規格",
-    "巴索利亞版本",
-    "MPG123版本",
-    "OUT123版本",
-    "支援的解碼器",
-    "所有解碼器",
-    "系統",
-    "系統架構",
-    "流程架構",
-    "系統描述",
-    ".NET 描述",
-    "設定重複檢查點",
-    "尋求重複檢查點",
-    "開啟均衡器",
-    "設備和驅動程式訊息",
-    "設定設備和驅動程式",
-    "重置設備和驅動程式",
-    "系統資訊",
-    "廣播電台訊息",
-    "廣播電台擴充訊息",
-    "新增廣播電台",
-    "上一個電台",
-    "下一個廣播電台",
-    "刪除目前電台",
-    "刪除所有廣播電台",
-    "選擇一個驅動程式。 ESC 退出。",
-    "選擇一個設備。目前驅動程式是{0}。 ESC 退出。",
-    "不玩。音樂播放器閒置。",
-    "低音",
-    "中上層",
-    "高音",
-    "未知帶類型",
-    "均衡器頻段",
-    "選擇要找的歌詞",
-    "原住民州",
-    "精準渲染",
-    "緩衝區填充",
-    "解碼延遲",
-    "編碼延遲",
-    "編碼填充",
-    "科學怪人流",
-    "新鮮解碼器",
-    "按下“A”將廣播電台插入播放清單。",
-    "輸入廣播電台的路徑。電台的 URL 必須提供 MPEG 廣播電台。尚不支援 AAC。",
-    "車站資訊",
-    "廣播電台網址",
-    "廣播電台名稱",
-    "電台當前歌曲",
-    "首頁",
-    "碼流路徑",
-    "聽眾：{0}，其中 {1} 處於高峰狀態",
-    "位元率",
-    "媒體類型",
-    "無線電伺服器資訊",
-    "串流媒體訊息",
-    "廣播電台使用 HTTPS",
-    "電台伺服器類型",
-    "廣播電台串流：{0}，其中 {1} 處於作用中狀態",
-    "廣播電台聽眾：{0}，高峰期為 {1}",
     "蜂鳴合成檔不存在。",
     "章節名稱",
     "合成器表示無效。",
@@ -3653,7 +3454,6 @@
     "未指定擴充處理程序。",
     "無法取得預設處理程序",
     "載入預設處理程序失敗。",
-    "嘗試存取無效路徑。進行此檢查是為了防止未更新至 2021 年 4 月修補程式或更高版本的舊版 Windows 10 系統存取這些已知會導致 NTFS 檔案系統損壞或藍屏死機 (BSOD) 問題的路徑。這意味著呼叫者正在嘗試導致拒絕服務 (DoS) 且應予以修復，或者使用者輸入是惡意的。",
     "選擇",
     "複製",
     "移動",
@@ -3692,11 +3492,6 @@
     "無法從中取得遠端調試設備",
     "無法開啟英文本地化資源",
     "無法開啟本地化資源",
-    "取得Figlet字體失敗",
-    "將 Figlet 字串列印到控制台（居中）",
-    "將帶有格式的 Figlet 字串列印到控制台（居中）",
-    "將 Figlet 字串列印到控制台（居中、位置）",
-    "使用格式（居中、位置）將 Figlet 字串列印到控制台",
     "無法取得入口點。",
     "測試資訊框中的按鈕（標題）",
     "測試資訊框中的彩色輸入框（標題）",
@@ -3714,7 +3509,6 @@
     "處理文字時發生正規表示式錯誤。檢查您的正規表示式語法並重試。如果發生超時，請確保不要遞歸太多（不要貪心）。",
     "主頁工具在嘗試處理您的請求時遇到錯誤。請確保您已正確輸入所有必要的數據。",
     "不幸的是，最後一次失敗是未知的，所以我們不知道到底出了什麼問題。但是，如果您查閱了核心偵錯日誌，這可能會有所幫助。",
-    "無法取得插件元數據",
     "無法獲取字段信息",
     "無法取得日記條目",
     "（使用箭頭鍵反白您的選擇，然後按 ENTER。）",
@@ -3818,7 +3612,6 @@
     "返回搜尋",
     "原始訊息",
     "從 MeCard 導入",
-    "沒有以下房產資訊",
     "手動新增",
     "無法取得日期部分數組",
     "無法取得日間部分",
@@ -3830,18 +3623,8 @@
     "產生名稱標籤（目前不支援變音符號）",
     "轉變...",
     "單位換算",
-    "音樂播放器",
-    "廣播播放器",
     "網路廣播 (FM) 訊息",
     "無法取得網路廣播資訊。",
-    "設備（已緩存",
-    "驅動程式（緩存",
-    "（空閒時）將音樂目錄新增至播放清單",
-    "（播放時）選擇性尋找",
-    "（播放時）找上一首歌詞",
-    "（播放時）尋找下一首歌詞",
-    "（播放時）尋找當前歌詞",
-    "（播放時）尋找哪句歌詞",
     "改變...",
     "節省...",
     "載入...",
@@ -3932,7 +3715,6 @@
     "用這個主題帶回懷舊之情！",
     "您的終端由木板組成",
     "靈感源自不同水果的中國圖案",
-    "附加功能 - CRC32C（卡斯塔尼奧利）",
-    "在開發版本上停用檢查更新。"
+    "附加功能 - CRC32C（卡斯塔尼奧利）"
   ]
 }
