--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
@@ -31,7 +31,6 @@
     "要求されたスクリーンセーバー{0}が見つかりません。",
     "{0}はデフォルトのスクリーンセーバーに設定されています。",
     "スクリーンセーバー{0}がデータベースに見つかりません。名前を確認して再試行してください。",
-    "テキストの印刷時に重大なエラーが発生しました。",
     "次の理由により、MODをロードできません。",
     "{0} v {1}が開始しました",
     "コマンド{0}の定義がありません。",
@@ -246,9 +245,7 @@
     "リモートデバッガポートを記述します。数値である必要があり、すでに使用されてはなりません。そうしないと、リモートデバッガーはポートを開くことができません。",
     "「get」コマンドが失敗したダウンロードを再試行する回数を書き込みます。数値である必要があります。",
     "答えは否定的ではないかもしれません。",
-    "変数{0}がどのモジュールにも見つかりません。",
     "カーネル構成を変更します",
-    "言語を切り替えるときに文化を変える",
     "表示されるテキスト",
     "表示したいテキストを書きます。短いほど良いです。",
     "{0}のアップロードに失敗しました",
@@ -297,7 +294,6 @@
     "https://home.openweathermap.org/api_keysで独自のAPIキーを取得できます。",
     "温度の優先単位",
     "起動するたびに、更新を確認します。",
-    "言語を切り替えるときは、月の名前やカレンダーなどを変更してください。",
     "ハードウェアプロービングメッセージをサイレントに保ちます。",
     "ログイン画面を表示する前に、今日のメッセージを表示します。",
     "ログイン画面を表示する前に画面をクリアしてください。",
@@ -429,8 +425,6 @@
     "発生したすべてのイベントをリストします",
     "カレントディレクトリ",
     "シェルの現在のディレクトリを設定します。既存のディレクトリへの絶対パスを書き込みます。",
-    "リスト出力をラップする",
-    "現在のコンソール ジオメトリに対して長すぎると思われる場合は、リスト出力をラップします。",
     "ピン！",
     "{0} があなたに ping を送信しました。",
     "テーマを現在のディレクトリに名前を付けて保存...",
@@ -471,7 +465,6 @@
     "リソースに存在する文字列を特定の言語に翻訳するテスト",
     "文字列をコンソールに出力し、見つかったプレースホルダーを解析します",
     "正規表現機能をテストします",
-    "すべての Mod を開始します。",
     "255 色の VT シーケンスをテストします。",
     "トゥルーカラーの VT シーケンスをテストします。",
     "受信者をテストするための通知を送信します",
@@ -666,9 +659,6 @@
     "ブラックリストに載っている改造",
     "起動時に実行されないmodのファイル名を書き込みます。終わったら、「q」と書いてください。パスの横にマイナス記号を書き込んで、既存のmodを削除します。",
     "Mod {0}はブラックリストに登録されています。",
-    "すべてのMODをリロードします",
-    "ブラックリストにmodを追加します",
-    "ブラックリストからmodを削除します",
     "起動時にアプリ情報を表示する",
     "ステージの終了時間を表示する",
     "起動時にカーネルの変更を開始します",
@@ -861,7 +851,6 @@
     "選択する最小数はいくつですか？",
     "選択できる最大数はいくつですか？",
     "指定すると、プレースホルダーをサポートするカスタマイズされたスタートアップバナーが表示されます。カーネルバージョンには{0}を使用できます。",
-    "月の名前、カレンダーなどを変更するために現在の言語のどのバリアントが使用されていますか？",
     "トゥルーカラーサポートをアクティブにします。",
     "行{0}でWordが削除されました。",
     "{0}行で文字列が置き換えられました。",
@@ -958,7 +947,6 @@
     "このソフトウェアの使用条件の詳細については、次のWebサイトをご覧ください。",
     "デフォルトの選択出力タイプ",
     "すべてのKS設定をチェックして、変数が正しく書き込まれているかどうかを確認します",
-    "これらの構成エントリには無効な変数または列挙型があり、修正する必要があります。",
     "ファイル{0}が見つかりません",
     "指定された値で変数配列を作成します",
     "すべてのローカリゼーションテキストの行番号をチェックして、それらがすべて等しいかどうかを確認します",
@@ -1031,8 +1019,6 @@
     "JSONシェルのデフォルトのJSONフォーマット",
     "保存するJSONシェルのデフォルトのJSONフォーマット（美化または縮小）を選択します。",
     "アップデートを正常にダウンロードしました！",
-    "更新を自動的にダウンロードする",
-    "更新がある場合、カーネルはそれを自動的にダウンロードします。",
     "花火の爆発半径",
     "点火したときの花火の爆発半径は何ブロック（最大10）ですか？",
     "このコマンドには、動作を変更する以下のスイッチがあります。",
@@ -1225,7 +1211,6 @@
     "ニトロシッド カーネルへようこそ! お試しいただきありがとうございます!",
     "開始するには、ENTER を押してください。",
     "あなたが使う言語を選んでください。デフォルトでは、カーネルは英語を使用しますが、ここで他の言語を選択することもできます。",
-    "システムの言語設定に基づいて、適切な言語は次のとおりです。",
     "最初のユーザーを作成する",
     "独自のユーザー名の作成をお手伝いします。任意の名前を選択します。ユーザー名にスペースや特殊文字が含まれておらず、まだ存在していない限り、これはニックネームでもショートネームでもかまいません。以下のユーザー名が登録されています。",
     "ユーザー名を入力してください",
@@ -1235,7 +1220,6 @@
     "Nitrocid KS は現在、自身を更新して、一般的な改善とバグ修正を含む最新バージョンを取得します。新しいメジャー バージョンには通常、重大な変更と新しい魅力的な機能が含まれています。",
     "Nitrocid KS が更新を自動的にチェックするようにしますか?",
     "Nitrocid KS は、アップデートを自動的にチェックするだけでなく、アップデート ファイルを自動的にダウンロードすることもできます。",
-    "Nitrocid KS にアップデートを自動的にダウンロードさせますか?",
     "「update」コマンドを使用すると、いつでもカーネルのアップデートを確認できます。",
     "始めましょう!",
     "おめでとう！ユーザー アカウント {0} が作成されました。",
@@ -1272,8 +1256,6 @@
     "引数のヘルプ説明がありません",
     "このテーマを使用するには、本体が True Color をサポートしている必要があります。",
     "プレビューを終了する",
-    "終わり",
-    "スイッチの種類",
     "テーマ {0} はイベントを祝っていますが、参加するには早すぎるか遅すぎます。毎年、このテーマは {1}/{2} から {3}/{4} までアクセスできます。",
     "テーマ {0} には True Color のサポートが必要ですが、本体はそれをサポートしていません。",
     "テキストは空であってはなりません。",
@@ -1337,14 +1319,12 @@
     "有効な構成クラスではありません。",
     "設定ファイルが無効です。",
     "構成の読み取り中にエラーが発生しました: {0}。",
-    "カーネル構成が正しく動作しなくなります。無効なキーは次のとおりです。",
     "検証に失敗しました！",
     "読み取りに失敗しました!",
     "構成を修正しようとしています...",
     "タイプが指定されていない場合、構成変数をチェックできません。",
     "エントリが指定されていない場合、構成変数をチェックできません。",
     "内容のないカスタム設定を登録しようとしています。",
-    "無効な内容のカスタム設定を登録しようとしています。無効なキーは次のとおりです。",
     "名前のないカスタム設定を登録解除しようとしています。",
     "カスタム設定が登録されていません。",
     "空のカスタム設定をクエリしようとしています。",
@@ -1352,7 +1332,6 @@
     "指定された変数と一致する設定キーが見つかりません。",
     "設定エントリの JSON 値が空です。",
     "内容のない基本設定を登録しようとしています。",
-    "無効な内容で基本設定を登録しようとしています。無効なキーは次のとおりです。",
     "名前のない基本設定を登録解除しようとしています。",
     "アサーションの失敗。",
     "イベント {0} が見つかりません。",
@@ -1523,9 +1502,6 @@
     "カーネルアドオンの初期化に失敗しました",
     "アドオンをファイナライズできませんでした。以下のアドオンはファイナライズに失敗しました:",
     "アドオンの停止に失敗しました。以下のアドオンは停止できませんでした:",
-    "関数のリストを取得できません",
-    "プロパティのリストを取得できません",
-    "フィールドのリストを取得できません",
     "存在しないアドオンではカスタム関数を実行できません",
     "アドオン '{1}' に関数 '{0}' が見つかりません。",
     "アドオン '{1}' にプロパティ '{0}' が見つかりません。",
@@ -1602,17 +1578,14 @@
     "ハードウェアの検出",
     "オプションのコンポーネント",
     "ユーザーの初期化",
-    "カーネルの変更",
     "システムの完全性の検証",
     "ステージ",
     "メンテナンスモードで実行中です。ステージを飛ばして…",
     "同じスレッドがすでに実行されている間は、カーネル スレッドを再生成できません。",
     "子スレッドの開始アクションを null にすることはできません。",
     "カーネル スレッド {0} が失敗しました。",
-    "パッケージ マネージャーを使用して Nitrocid KS をインストールしました。代わりにカーネルをアップグレードするために使用してください。",
     "情報がありません。",
     "ファイルまたはフォルダーを開けません",
-    "任意のキーを押してこのウィンドウを閉じます。",
     "改行スタイル:",
     "バイナリーファイル：",
     "MIME メタデータ:",
@@ -1687,7 +1660,6 @@
     "失敗",
     "進行状況ハンドラーは null であってはなりません。",
     "処理...",
-    "メソッド タイプは、基本 Nitrocid タイプ リストでは定義されていません。",
     "この方法は存在しません。",
     "このメソッドは静的です。非オブジェクト オーバーロードを使用します。",
     "このメソッドは静的ではありません。オブジェクトのオーバーロードを使用します。",
@@ -1705,8 +1677,6 @@
     "{0}% に達しました!",
     "読み込み中...",
     "存在しないMODではカスタム関数を実行できません",
-    "存在しない MOD ではカスタム プロパティを実行できません",
-    "存在しないMODではカスタムフィールドを実行できません",
     "依存関係が満たされていない。失敗した依存関係を以下に示します。",
     "存在しない MOD {0} のマニュアルを照会しようとしました。",
     "存在しない MOD {1} のマニュアル {0} を初期化しようとしました。",
@@ -1818,26 +1788,10 @@
     "ネットワークシステムのテスト",
     "UESH シェル テスト",
     "ユーザーテスト",
-    "統計",
     "シャットダウン",
-    "現在のテスト統計を表示します",
     "テストモードを終了し、カーネルをシャットダウンします。",
     "実行するテストセクションを選択してください",
-    "すべてをテストする",
-    "すべてのファサードをテストします",
-    "セクションの選択に戻ります",
-    "実行するテスト ファサードを選択してください",
-    "このテストにはオプションのパラメーターが含まれています。テストパラメータに追加するパラメータの値を入力します。",
-    "パラメータ数",
-    "はい！",
     "いいえ",
-    "リトライ",
-    "テストは期待どおりに実行されましたか?",
-    "テストは失敗しました。期待値は {0} ですが、実際の値は {1} です。",
-    "テストは予期せず失敗しました。",
-    "成功したテスト:",
-    "失敗したテスト:",
-    "実行するテスト:",
     "スタック フレーム番号は、現在のフレーム量を超えたり、負の値であってはなりません。",
     "ニトロシッドKS",
     "カーネル スレッド スーパーバイザは、まだ開始されていない {0} 個の重要なスレッドを検出しました。",
@@ -1929,7 +1883,6 @@
     "優先ユーザー言語を変更します",
     "デバッグ シェルを使用する前に、デバッグ モードを有効にする必要があります。",
     "現在のバックトレースを取得します",
-    "セッション番号を使用してデバッグログ情報を簡単に取得します",
     "カーネル例外タイプからメッセージを取得します。デバッグに便利",
     "フィールド値を取得します",
     "プロパティ値を取得します",
@@ -1961,7 +1914,6 @@
     "ファイルまたはフォルダーのロックを確認します",
     "ファイルまたはフォルダーのロックが解除されるまで待機します",
     "言語を変更します",
-    "システム言語設定を使用して、言語を推測しようとします。",
     "システム言語の代わりにユーザー言語を変更します",
     "一行選択スタイル",
     "2 行選択スタイル",
@@ -2124,12 +2076,8 @@
     "デバッガーに文字列を出力します",
     "書式設定された文字列をデバッガーに出力します",
     "文字列をフォーマットしてコンソールに出力します",
-    "フィグレット文字列をコンソールに出力します",
-    "フィグレット文字列をフォーマットしてコンソールに出力します",
     "ハイライトを使用して文字列をコンソールに出力します",
     "セパレータをコンソールに出力する",
-    "セパレータをカラーでコンソールに印刷します",
-    "書式設定と色を指定してセパレーターをコンソールに出力します",
     "セパレータを書式付きでコンソールに出力します",
     "文字列に改行を入れてコンソールに文字列を出力します",
     "NULL 文字を含む文字列をコンソールに出力します",
@@ -2193,8 +2141,6 @@
     "グループ",
     "優先ユーザー言語は {0} に設定されています。再度ログインすることもできます。",
     "管理者シェル",
-    "無効なセッション番号です",
-    "そのようなセッション番号はありません",
     "そのような例外タイプはありません",
     "例外の種類名",
     "メッセージ",
@@ -2317,8 +2263,6 @@
     "利用可能",
     "テーマを選択してください",
     "このテーマを設定しますか?",
-    "はい、設定してください！",
-    "いいえ、設定しないでください。",
     "Nitrocid の一般的な使用方法に関するユーザー マニュアルにアクセスするには、以下のリンクにアクセスしてください。",
     "カーネルの変更とスクリーンセーバーを行う最新の方法に関する開発者マニュアルにアクセスするには、以下のリンクにアクセスしてください。",
     "すでに昇格した Nitrocid セッションを実行しています。",
@@ -2348,7 +2292,6 @@
     "カーネルリリース5周年を記念",
     "アーカイブ ファイルをアーカイブ シェルに開きます",
     "歌詞ファイルからすべての歌詞行を取得します",
-    "インタラクティブな音楽プレーヤーを開きます",
     "歌詞ファイルを再生します",
     "サウンドを再生します",
     "紅茶やコーヒーの準備ができたらアラームを追加して知らせます。",
@@ -2469,8 +2412,6 @@
     "何も抽出できません。",
     "タイプが次であるため、アーカイブは書き込み可能ではありません",
     "必ずLRCファイルへのパスを指定してください。",
-    "音楽ファイル '{0}' は存在しません。",
-    "BassBoom CLI アドオンの致命的なエラー。",
     "ファイルが見つからないためサウンドを再生できません。",
     "音楽ファイルが正常に開きました。",
     "音楽ファイルを開けません。",
@@ -2483,63 +2424,8 @@
     "間隔",
     "再生を停止するには「q」を押します。",
     "音を再生できません。",
-    "イコライザー操作を処理しようとすると、Basolia でエラーが発生します。",
-    "イコライザー操作を処理しようとすると、Basolia 出力でエラーが発生します。",
-    "イコライザー操作を処理しようとしたときに不明なエラーが発生しました。",
-    "変化",
-    "バンドの選択",
-    "バスブーム搭載",
-    "音楽ファイルへのパスを入力します",
-    "ファイル「{0}」は存在しません。",
-    "音楽ライブラリ ディレクトリへのパスを入力します",
-    "音楽ライブラリのディレクトリが見つかりません。",
-    "{0} を開くために BassBoom をロードしています...",
     "再生中",
-    "歌詞ファイルを開こうとしています",
-    "歌詞ファイルが開けません",
-    "目標位置をこの形式で記述します",
-    "利用可能なキーストローク",
-    "再生/一時停止",
-    "停止",
-    "音量調節",
-    "シークコントロール",
-    "シーク期間の制御",
-    "楽曲情報",
-    "音楽ファイルを追加する",
-    "前の曲",
-    "次の曲",
-    "現在の曲を削除する",
-    "すべての曲を削除する",
-    "未知",
     "タイトル",
-    "アルバム",
-    "コメント",
-    "歌詞",
-    "行",
-    "歌詞なし",
-    "レイヤー情報",
-    "層",
-    "レート",
-    "モード",
-    "モード外部",
-    "フレームサイズ",
-    "強調",
-    "ビットレート",
-    "ABR率",
-    "可変ビットレート",
-    "テキストとおまけ",
-    "音楽ファイル '{0}' が見つからないため開けません。",
-    "曲名",
-    "ソングアーティスト",
-    "曲のジャンル",
-    "求める",
-    "音量",
-    "音楽ファイルを処理しようとすると、Basolia でエラーが発生します。",
-    "音楽ファイルを処理しようとすると、Basolia 出力でエラーが発生します。",
-    "音楽ファイルを処理しようとすると、不明なエラーが発生します。",
-    "再生失敗",
-    "ヘルプ",
-    "「A」を押して単一の曲をプレイリストに挿入するか、「S」を押して音楽ライブラリ全体を挿入します。",
     "アメリカンコーヒー",
     "レッドティー",
     "緑茶",
@@ -2718,7 +2604,6 @@
     "変換する数値が入力されていません。",
     "入力された番号は無効です。",
     "単位変換ができない。",
-    "0.0.1 以来 6,000 回目のコミットを祝います!",
     "つづく...",
     "終わり",
     "あけましておめでとう！",
@@ -2923,12 +2808,6 @@
     "言語",
     "カーネル言語を指定します。",
     "文化",
-    "色覚異常を有効にする",
-    "色覚異常がある場合、または色覚異常をシミュレートしたい場合は、これを有効にすることができます。",
-    "色覚異常の種類",
-    "色覚異常のタイプ。プロタン、ドイター、トリタンのいずれか。",
-    "色覚異常の重症度",
-    "色覚異常はどのくらい重度ですか?",
     "シャットダウンまたは再起動時にビープ音が鳴る",
     "カーネルのシャットダウン時のビープ音を有効にします。",
     "シャットダウンまたは再起動時の遅延",
@@ -2941,18 +2820,12 @@
     "true に設定すると、開発バージョンでカーネルを起動するたびに、カーネルは開発通知を表示しません。",
     "信頼できない MOD の読み込みを許可する",
     "true に設定すると、署名された公開キーを持たない MOD をロードするときにカーネルはエラーを出しません。",
-    "デバッグクォータが有効になっています",
-    "このオプションが有効な場合、クォータを超過すると、デバッグ ライターはデバッグ ログ ファイルをローテーションします。",
-    "デバッグクォータ行数",
-    "クォータ制限に達する前に、デバッグ バッファに何行出力する必要がありますか? デバッグ ログ ファイルの行数を表すものではないことに注意してください。",
     "システムのタイムゾーンを使用する",
     "このオプションが有効な場合、カーネルはコンピュータ設定のタイムゾーンを使用します。それ以外の場合は、設定可能なカーネル全体のタイム ゾーンを使用します。",
     "カーネル全体のタイムゾーン",
     "使用するカーネル全体のタイムゾーン",
     "ライセンス情報ボックスを表示する",
     "各ログイン後にモーダル ライセンス情報ボックスを 3 秒間表示するかどうか。付けたままにしておくのがおすすめです。",
-    "デバッグ ログのレガシー ロギング スタイル",
-    "デバッグ ログの従来のログ スタイルを有効にするか、グループ化されたデバッグ ログを有効にするか。",
     "このセクションでは、変更する色の種類を選択できます。",
     "色の設定",
     "アクセントカラーを使う",
@@ -3040,8 +2913,6 @@
     "コマンド実行時にコンソールのタイトルを設定する",
     "コマンド実行時にコンソールのタイトルを設定します。",
     "砲弾数を表示する",
-    "このセクションでは、シェルのプリセット設定をリストします。",
-    "シェルのプリセット設定",
     "プロンプトプリセット",
     "テキスト編集プロンプトのプリセット",
     "16 進数編集プロンプトのプリセット",
@@ -3104,7 +2975,6 @@
     "CPU 使用率を更新してデバッガーに出力するまでに何ミリ秒待つ必要がありますか?",
     "ヘビゲーム。",
     "素敵な名言を紹介します。",
-    "このセクションでは、娯楽の仕組みを設定できます。",
     "好みの難易度を選択します。0 は簡単、1 は中程度、2 は難しい、3 は非常に難しい、4 はカスタムです。",
     "ShipDuet で宇宙船をレンダリングするために PowerLine を使用する",
     "PowerLine を使用して宇宙船をレンダリングするか、標準の「以上」文字を使用するか。ShipDuet で PowerLine を使用する場合は、PowerLine をサポートする適切なフォントをインストールする必要があります。",
@@ -3133,7 +3003,6 @@
     "このセクションでは、SFTP シェルがどのように動作するかを構成できます。",
     "このセクションでは、SQL シェルがどのように動作するかを構成できます。",
     "SQL シェル プロンプト プリセット",
-    "このセクションでは、タイマーの動作方法を構成できます。",
     "このセクションでは、ヒントの動作を構成できます。",
     "カーネルのヒントを表示する",
     "有効にすると、シェルはログインごとにヒントを表示します。",
@@ -3281,7 +3150,6 @@
     "自動更新チェック",
     "はい、そうします！",
     "結構です。",
-    "自動更新ダウンロード",
     "セーフモードでは MOD の起動または停止は許可されません。",
     "不明なカーネル エラーが発生しました。カーネル例外タイプが指定されていないか、何かが間違っていたことが原因である可能性があります。",
     "カーネル ネットワークは、ホスト名コンポーネントのエラーを報告しました。",
@@ -3416,7 +3284,6 @@
     "共通単語リストを使用します。",
     "完全な単語リストを使用します。",
     "ピンポンゲーム！",
-    "代わりにラジオ局プレーヤーを開きます",
     "ビープシンセファイルを読み込む",
     "ソース カラー モデルを数値でターゲット カラー モデルに変換します。",
     "ソース カラー モデルを KS 形式のターゲット カラー モデルに変換します。",
@@ -3445,72 +3312,6 @@
     "インタラクティブなTUIで新しいテーマを作成します",
     "カーネル MOD を使用して起動可能なプログラムを作成できるということですか?",
     "駅の種類",
-    "デバイス",
-    "運転者",
-    "再生していない間は現在のデバイスを照会できません。",
-    "デバイスとドライバー",
-    "利用可能なデバイスとドライバー",
-    "BassBoomの仕様",
-    "デコーダー",
-    "システム仕様",
-    "バソリア版",
-    "MPG123バージョン",
-    "OUT123バージョン",
-    "サポートされているデコーダー",
-    "すべてのデコーダー",
-    "システム",
-    "システムアーキテクチャー",
-    "プロセスアーキテクチャ",
-    "システムの説明",
-    ".NET の説明",
-    "繰り返しチェックポイントを設定する",
-    "チェックポイントを繰り返す",
-    "イコライザーを開く",
-    "デバイスとドライバーの情報",
-    "デバイスとドライバーを設定する",
-    "デバイスとドライバーをリセットする",
-    "システム情報",
-    "ラジオ局情報",
-    "ラジオ局の詳細情報",
-    "ラジオ局を追加する",
-    "以前のラジオ局",
-    "次のラジオ局",
-    "現在のラジオ局を削除する",
-    "すべてのラジオ局を削除する",
-    "ドライバーを選択してください。終了するには ESC を押してください。",
-    "デバイスを選択してください。現在のドライバーは {0} です。終了するには ESC キーを押してください。",
-    "再生されていません。音楽プレーヤーはアイドル状態です。",
-    "ベース",
-    "上中",
-    "トレブル",
-    "不明なバンドタイプ",
-    "イコライザーバンド",
-    "検索する歌詞を選択してください",
-    "ネイティブ州",
-    "正確なレンダリング",
-    "バッファフィル",
-    "デコード遅延",
-    "エンコード遅延",
-    "エンコーディングパディング",
-    "フランケンシュタインストリーム",
-    "フレッシュデコーダー",
-    "「A」を押すと、プレイリストにラジオ局が挿入されます。",
-    "ラジオ局へのパスを入力します。局への URL は MPEG ラジオ局を提供する必要があります。AAC ラジオ局はまだサポートされていません。",
-    "駅情報",
-    "ラジオ局のURL",
-    "ラジオ局名",
-    "ラジオ局の現在の曲",
-    "ホームページ",
-    "ストリームパス",
-    "リスナー数: {0}、ピーク時は {1}",
-    "ビットレート",
-    "メディアタイプ",
-    "ラジオサーバー情報",
-    "ストリーム情報",
-    "ラジオ局はHTTPSを使用しています",
-    "ラジオ局サーバータイプ",
-    "ラジオ局のストリーム: {0}、アクティブ: {1}",
-    "ラジオ局のリスナー数: {0}、ピーク時は {1}",
     "ビープシンセファイルが存在しません。",
     "章名",
     "シンセ表現が無効です。",
@@ -3653,7 +3454,6 @@
     "拡張機能のハンドラが指定されていません。",
     "デフォルト ハンドラを取得できませんでした",
     "デフォルト ハンドラーの読み込みに失敗しました。",
-    "無効なパスにアクセスしようとしています。このチェックは、2021 年 4 月の修正プログラム以降に更新されていない古い Windows 10 システムが、NTFS ファイルシステムの破損またはブルー スクリーン (BSOD) の問題を引き起こすことが知られているこれらのパスにアクセスしないようにするために行われました。これは、呼び出し元がサービス拒否 (DoS) を引き起こそうとしており、修正する必要があるか、またはユーザー入力が悪意のあるものであることを意味します。",
     "選択",
     "コピー",
     "動く",
@@ -3692,11 +3492,6 @@
     "リモートデバッグデバイスを取得できません",
     "英語ローカリゼーションリソースを開けません",
     "ローカリゼーションリソースを開けません",
-    "figlet フォントを取得できませんでした",
-    "figlet 文字列をコンソールに印刷します (中央揃え)",
-    "figlet 文字列を書式付きでコンソールに印刷します (中央揃え)",
-    "figlet 文字列をコンソールに印刷します (中央揃え、位置指定)",
-    "figlet 文字列を書式付きでコンソールに出力します (中央揃え、位置指定)",
     "エントリ ポイントの取得に失敗しました。",
     "情報ボックス内のボタンをテストします（タイトル付き）",
     "情報ボックス（タイトル付き）内の色付き入力ボックスをテストします",
@@ -3714,7 +3509,6 @@
     "テキストの処理中に正規表現エラーが発生しました。正規表現の構文を確認して、もう一度試してください。タイムアウトが発生した場合は、再帰しすぎないようにしてください (貪欲になりすぎないでください)。",
     "ホームページ ツールでリクエストの処理中にエラーが発生しました。必要なデータがすべて正しく入力されていることを確認してください。",
     "残念ながら、最後の失敗は不明なので、何が問題だったのか正確にはわかりません。ただし、カーネル デバッグ ログを参照すると役立つ場合があります。",
-    "アドオンメタデータの取得に失敗しました",
     "フィールド情報を取得できません",
     "ジャーナルエントリを取得できません",
     "(矢印キーを使用して選択項目を強調表示し、ENTER キーを押します。)",
@@ -3818,7 +3612,6 @@
     "検索 戻る",
     "生の情報",
     "MeCardからのインポート",
-    "物件情報がありません",
     "手動で追加",
     "曜日区分配列を取得できません",
     "曜日パートを取得できません",
@@ -3830,18 +3623,8 @@
     "名札を生成します（ウムラウトは現在サポートされていません）",
     "変換する...",
     "単位換算",
-    "音楽プレーヤー",
-    "ラジオプレーヤー",
     "インターネットラジオ（FM）情報",
     "インターネットラジオの情報を取得できません。",
-    "デバイス（キャッシュ済み",
-    "ドライバー（キャッシュ済み",
-    "(アイドル時) プレイリストに音楽ディレクトリを追加する",
-    "（再生時）選択的に検索",
-    "（再生中）前の歌詞に戻る",
-    "（再生中）次の歌詞を探す",
-    "（再生中）現在の歌詞を検索",
-    "（演奏中）どの歌詞に",
     "変化...",
     "保存...",
     "負荷...",
@@ -3932,7 +3715,6 @@
     "このテーマで懐かしさを蘇らせましょう！",
     "あなたのターミナルは木の板でできています",
     "さまざまな果物の中国のパターンからインスピレーションを得た",
-    "追加機能 - CRC32C (Castagnoli)",
-    "開発バージョンでは更新の確認は無効になっています。"
+    "追加機能 - CRC32C (Castagnoli)"
   ]
 }
